--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 name: Time-Series-Simulation
 channels:
+  - intel
   - conda-forge
 dependencies:
+  - python=3.7
   - numpy
   - psutil
   - toolz
